--- a/src/app/add-person/add-person.component.html
+++ b/src/app/add-person/add-person.component.html
@@ -1,47 +1,70 @@
-<!--<div class="content" role="main">-->
+<!--<div class="content" role="main" style="width: calc((100%/2) - (100%/10)); float: left">-->
+<div class="content flex-box" role="main">
+    <div *ngIf="this.trip.participant_list.length > 0">
 
+      <h4>Participants list </h4>
+      <table mat-table [dataSource]="this.trip.participant_list" >
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <td mat-cell *matCellDef="let participant">{{participant.name}}</td>
+        </ng-container>
+        <ng-container matColumnDef="stayed">
+          <th mat-header-cell *matHeaderCellDef>Stayed</th>
+          <td mat-cell *matCellDef="let participant">{{participant.day_count}}/{{this.trip.default_number_of_days}}</td>
+        </ng-container>
 
-<div *ngIf="this.appComponent.isInit && this.dataStorageService.getTrip().participant_list !== undefined && this.dataStorageService.getTrip().participant_list.length > 0">
+        <ng-container matColumnDef="refunds">
+          <th mat-header-cell *matHeaderCellDef>Refunds</th>
+          <td mat-cell *matCellDef="let participant">
 
-  <p>Total amount payed is {{ this.dataStorageService.getTrip().total_amount }}. </p>
-  <table class="striped">
-    <tr *ngFor="let participant of this.dataStorageService.getTrip().participant_list">
-      <td>
-        {{ participant.name}} stayed for {{participant.day_count}} day<span *ngIf="participant.day_count>1">s</span>
-        <span *ngIf="participant.refund_to.length > 0">
-          <p *ngFor="let refundTo of participant.refund_to" style="margin: 15px 0 0 15px">
-            <span *ngIf="!refundTo.done" class="red">
-              need to refund {{refundTo.amount | number : '1.0-2' }} to {{ refundTo.to}}
-            </span>
-            <span *ngIf="refundTo.done" class="green">
-              has refunded {{refundTo.amount | number : '1.0-2' }} to {{ refundTo.to}}
-            </span>
-          </p>
-        </span>
-      </td>
-      <td>
-        <button class="btn waves-effect waves-light" type="submit" (click)="this.appComponent.removeUser(participant.name)">X</button>
-      </td>
-    </tr>
-  </table>
+            <table mat-table [dataSource]="participant.refund_to" *ngIf="participant.refund_to.length > 0">
+              <ng-container matColumnDef="amount">
+                <th mat-header-cell *matHeaderCellDef>Amount</th>
+                <td mat-cell *matCellDef="let refund">{{refund.amount | number: '1.0-2'}}</td>
+              </ng-container>
+              <ng-container matColumnDef="refunds_to">
+                <th mat-header-cell *matHeaderCellDef>To</th>
+                <td mat-cell *matCellDef="let refund">{{refund.to}}</td>
+              </ng-container>
+              <tr mat-header-row *matHeaderRowDef="participantRefundsColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: participantRefundsColumns;"></tr>
+            </table>
+            <i *ngIf="participant.refund_to.length < 1" style="font-size: 8pt"> All clear, wait for refunds ... </i>
+          </td>
+        </ng-container>
 
-</div>
+        <ng-container matColumnDef="remove">
+          <th mat-header-cell *matHeaderCellDef>Remove</th>
+          <td mat-cell *matCellDef="let participant">
+            <button class="mat-primary" mat-button type="submit" (click)="this.removeUser(participant.name)">X</button>
+          </td>
+        </ng-container>
 
-
-  <h4>Add a participant</h4>
-
-  <form [formGroup]="addPersonForm" (ngSubmit)="onSubmit()">
-
-    <div>
-      <label for="name">Name</label>
-      <input id="name" type="text" formControlName="name" required="true">
+        <tr mat-header-row *matHeaderRowDef="participantsColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: participantsColumns;"></tr>
+      </table>
     </div>
-    <div>
-      <label for="number_of_days">How long this participant was present</label>
-      <input id="number_of_days" type="number" formControlName="number_of_days" required="true">
+
+
+    <h4  style="margin-top: 60px">Add a participant</h4>
+
+    <form [formGroup]="addPersonForm" (ngSubmit)="onSubmit()">
+
+      <p>
+        <mat-form-field appearance="fill">
+          <mat-label>Name</mat-label>
+          <input matInput id="name" type="text" formControlName="name" required="true">
+        </mat-form-field>
+      </p>
+      <p>
+        <mat-form-field appearance="fill">
+          <mat-label>How long this participant was present</mat-label>
+          <input matInput id="number_of_days" type="number" formControlName="number_of_days" required="true">
+        </mat-form-field>
+      </p>
+
+      <button mat-raised-button class="mat-primary" type="submit">Add a participant !</button>
+
+    </form>
     </div>
 
-    <button class="btn" type="submit">Add a participant !</button>
-
-  </form>
-<!--</div>-->
