--- a/src/app/create-trip/create-trip.component.html
+++ b/src/app/create-trip/create-trip.component.html
@@ -1,13 +1,15 @@
 <!--<div class="content" role="main">-->
 
-  <form [formGroup]="createTripForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="createTripForm" (ngSubmit)="onSubmit()">
+  <p>
+  <mat-form-field appearance="fill">
+    <!--    <div class="mat-form-field-wrapper">-->
+    <mat-label>How long was your trip in days ?</mat-label>
+    <input matInput class="mat-input-element" id="days" type="number" formControlName="days" required="true"/>
+    <!--    </div>-->
+  </mat-form-field>
+  </p>
 
-    <div>
-      <label for="days">How long was your trip in days ?</label>
-      <input id="days" type="number" formControlName="days" required="true">
-    </div>
-
-    <button class="btn" type="submit">Create the list of participants!</button>
-
-  </form>
+  <button mat-raised-button class="mat-button" type="submit">Create the list of participants!</button>
+</form>
 <!--</div>-->
