--- a/src/app/create-trip/create-trip.component.html
+++ b/src/app/create-trip/create-trip.component.html
@@ -1,5 +1,5 @@
 <!--<div class="content" role="main">-->
-
+<div class="content flex-box" role="main">
 <form [formGroup]="createTripForm" (ngSubmit)="onSubmit()">
   <p>
   <mat-form-field appearance="fill">
@@ -12,4 +12,4 @@
 
   <button mat-raised-button class="mat-button" type="submit">Create the list of participants!</button>
 </form>
-<!--</div>-->
+</div>
