--- a/src/app/add-spending/add-spending.component.html
+++ b/src/app/add-spending/add-spending.component.html
@@ -3,10 +3,10 @@
 
   <div>
     <h4>Spendings list:</h4>
-    <table mat-table [dataSource]="this.spending_list">
+    <table mat-table [dataSource]="this.spending_list" class="mat-elevation-z1">
       <ng-container matColumnDef="amount">
         <th mat-header-cell *matHeaderCellDef>Amount</th>
-        <td mat-cell *matCellDef="let spending">{{spending.amount | number: '1.0-2'}}</td>
+        <td mat-cell *matCellDef="let spending">{{spending.amount | euro}}</td>
       </ng-container>
 
       <ng-container matColumnDef="paid_by">
@@ -14,69 +14,48 @@
         <td mat-cell *matCellDef="let spending">{{spending.payed_by}}</td>
       </ng-container>
 
-      <ng-container matColumnDef="for">
-        <th mat-header-cell *matHeaderCellDef>For</th>
-        <td mat-cell *matCellDef="let spending"><span *ngFor="let shared_with of spending.shared_with">{{ shared_with }}, </span></td>
+      <ng-container matColumnDef="reason">
+        <th mat-header-cell *matHeaderCellDef>Reason</th>
+        <td mat-cell *matCellDef="let spending">{{spending.reason}}</td>
       </ng-container>
 
-      <ng-container matColumnDef="remove">
-        <th mat-header-cell *matHeaderCellDef>Remove</th>
-        <td mat-cell *matCellDef="let spending">
-          <button mat-button class="mat-primary" type="submit" (click)="this.appComponent.removeSpending(spending.idx)">X</button>
-        </td>
+      <ng-container matColumnDef="for">
+        <th mat-header-cell *matHeaderCellDef>For</th>
+        <td mat-cell *matCellDef="let spending"><span >{{ sharedWithPrintList(spending.shared_with) }} </span></td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="spendingsColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: spendingsColumns;"></tr>
+      <tr mat-row *matRowDef="let row; columns: spendingsColumns;" (click)="openSpendingModifDialog(row.idx)"></tr>
 
     </table>
   </div>
 
-  <!--  <div *ngFor="let spending of this.dataStorageService.getTrip().spending_list" id="modalSpending{{spending.idx}}" class="modal">-->
-  <!--    <div class="modal-content">-->
-  <!--      <table class="striped">-->
-  <!--        <th>Amount</th>-->
-  <!--        <th>Paid by</th>-->
-  <!--        <th>For</th>-->
-  <!--        <th>Delete</th>-->
-  <!--        <tr>-->
-  <!--          <td> {{ spending.amount }} </td>-->
-  <!--          <td> {{ spending.payed_by }}</td>-->
-  <!--          <td><a href="#modalSpending{{spending.idx}}"><span *ngFor="let shared_with of spending.shared_with">{{ shared_with }}, </span></a></td>-->
-  <!--          <td>-->
-  <!--            <button class="btn" type="submit" (click)="this.appComponent.removeSpending(spending.idx)">X</button>-->
-  <!--          </td>-->
-  <!--        </tr>-->
-  <!--      </table>-->
-  <!--    </div>-->
-  <!--  </div>-->
-
-
   <h4 style="margin-top: 60px">Add a spending</h4>
-
 
   <form [formGroup]="createSpendingForm" (ngSubmit)="onSubmit()">
 
     <div>
       <mat-form-field appearance="fill">
         <mat-label>Amount</mat-label>
-        <input matInput id="amount" type="number" formControlName="amount" required="true">
+        <input matInput id="amount" type="number" [formControl]="amountControl" required="true">
+        <mat-error *ngIf="amountControl.invalid">{{checkForAmountError()}}</mat-error>
       </mat-form-field>
     </div>
 
     <div>
       <mat-form-field appearance="fill">
         <mat-label>Who paid for this?</mat-label>
-        <mat-select [(value)]="payer">
+        <mat-select [formControl]="payerControl" [(value)]="payer">
           <mat-option *ngFor="let formOption of this.participantSelectOptions" [value]="formOption.value">{{formOption.viewValue}}</mat-option>
         </mat-select>
+        <mat-error *ngIf="payerControl.invalid">{{checkForPayerError()}}</mat-error>
       </mat-form-field>
     </div>
 
     <div>
       <mat-form-field appearance="fill">
         <mat-label>Reason</mat-label>
-        <input matInput id="reason" type="text" formControlName="reason" required="true">
+        <input matInput id="reason" type="text" formControlName="reason">
       </mat-form-field>
     </div>
 
