--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,10 @@ p {
   margin: 0;
 }
 
+.footer {
+  padding: 20px;
+}
+
 .spacer {
   flex: 1;
 }
@@ -29,8 +33,23 @@ table {
   /*width: calc((100%/2) - (100%/10));*/
 }
 
-td.mat-cell {
-  padding: 0 0 0 10px !important;
+.bar {
+  margin-bottom: 5px;
+  height: 10px;
+  display: inline-block;
+}
+
+.owe {
+  background-color: indianred;
+}
+
+
+.refund {
+  background-color: darkorchid;
+}
+
+.filler {
+  background-color: white;
 }
 
 @media (min-width: 900px) {
@@ -45,13 +64,13 @@ td.mat-cell {
 
 .flex-box {
   flex: 1;
-  margin: 50px !important;
+  margin: 20px !important;
 }
 
-/*th.mat-header-cell {*/
-/*  padding: 0 30px 0 30px !important;*/
-/*}*/
+th.mat-header-cell {
+  padding: 0 3px 0 3px !important;
+}
 
-/*td.mat-cell {*/
-/*  padding: 0 30px 0 30px !important;*/
-/*}*/
+td.mat-cell {
+  padding: 0 3px 0 3px !important;
+}
