--- a/src/app/create-trip/create-trip.component.html
+++ b/src/app/create-trip/create-trip.component.html
@@ -1,6 +1,6 @@
 <!--<div class="content" role="main">-->
 <div class="content flex-box" role="main">
-<form [formGroup]="createTripForm" (ngSubmit)="onSubmit()">
+<form *ngIf="trip !== undefined" [formGroup]="createTripForm" (ngSubmit)="onSubmit()">
   <p>
   <mat-form-field appearance="fill">
     <!--    <div class="mat-form-field-wrapper">-->
