--- a/src/app/add-person/add-person.component.html
+++ b/src/app/add-person/add-person.component.html
@@ -1,84 +1,84 @@
 <!--<div class="content" role="main" style="width: calc((100%/2) - (100%/10)); float: left">-->
 <div class="content flex-box" role="main">
-    <div *ngIf="this.trip.participant_list.length > 0">
+  <div *ngIf="this.trip.participant_list.length > 0">
 
-      <h4>Participants list </h4>
-      <table mat-table [dataSource]="this.trip.participant_list" class="mat-elevation-z1">
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef >Name</th>
-          <td mat-cell *matCellDef="let participant" (click)="openParticipantModifDialog(participant.name)">{{participant.name}}</td>
-          <td mat-footer-cell *matFooterCellDef> <b> Total </b> </td>
-        </ng-container>
-        <ng-container matColumnDef="stayed"  >
-          <th mat-header-cell [hidden]="mainPage.app.mobile" *matHeaderCellDef>Stayed</th>
-          <td mat-cell [hidden]="mainPage.app.mobile" *matCellDef="let participant" (click)="openParticipantModifDialog(participant.name)">{{participant.day_count}}/{{this.trip.default_number_of_days}}</td>
-          <td mat-footer-cell *matFooterCellDef></td>
-        </ng-container>
-        <ng-container matColumnDef="owe">
-          <th mat-header-cell *matHeaderCellDef>Owe</th>
-          <td mat-cell *matCellDef="let participant" (click)="openParticipantModifDialog(participant.name)">{{participant.owe_amount | euro}}</td>
-          <td mat-footer-cell *matFooterCellDef></td>
-        </ng-container>
-        <ng-container matColumnDef="payed">
-          <th mat-header-cell *matHeaderCellDef>Payed</th>
-          <td mat-cell *matCellDef="let participant" (click)="openParticipantModifDialog(participant.name)">{{participant.payed_amount | euro}}</td>
-          <td mat-footer-cell *matFooterCellDef> <b>{{this.getTotalCost() | euro: true}} </b> </td>
-        </ng-container>
-        <ng-container matColumnDef="spent">
-          <th mat-header-cell [hidden]="mainPage.app.mobile" *matHeaderCellDef>Spent</th>
-          <td mat-cell [hidden]="mainPage.app.mobile" *matCellDef="let participant" (click)="openParticipantModifDialog(participant.name)">{{participant.total_spent | euro}}</td>
-          <td mat-footer-cell *matFooterCellDef></td>
-        </ng-container>
+    <h4 i18n>Participants list </h4>
+    <table mat-table [dataSource]="this.trip.participant_list" class="mat-elevation-z1">
+      <ng-container matColumnDef="name">
+        <th i18n mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let participant" (click)="openParticipantModifDialog(participant.name)">{{participant.name}}</td>
+        <td i18n mat-footer-cell *matFooterCellDef><b> Total </b></td>
+      </ng-container>
+      <ng-container matColumnDef="stayed">
+        <th i18n mat-header-cell [hidden]="mainPage.app.mobile" *matHeaderCellDef>Stayed</th>
+        <td mat-cell [hidden]="mainPage.app.mobile" *matCellDef="let participant" (click)="openParticipantModifDialog(participant.name)">{{participant.day_count}}/{{this.trip.default_number_of_days}}</td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+      <ng-container matColumnDef="owe">
+        <th i18n mat-header-cell *matHeaderCellDef>Owe</th>
+        <td mat-cell *matCellDef="let participant" (click)="openParticipantModifDialog(participant.name)">{{participant.owe_amount | euro}}</td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+      <ng-container matColumnDef="payed">
+        <th i18n mat-header-cell *matHeaderCellDef>Payed</th>
+        <td mat-cell *matCellDef="let participant" (click)="openParticipantModifDialog(participant.name)">{{participant.payed_amount | euro}}</td>
+        <td mat-footer-cell *matFooterCellDef><b>{{this.getTotalCost() | euro: true}} </b></td>
+      </ng-container>
+      <ng-container matColumnDef="spent">
+        <th i18n mat-header-cell [hidden]="mainPage.app.mobile" *matHeaderCellDef>Spent</th>
+        <td mat-cell [hidden]="mainPage.app.mobile" *matCellDef="let participant" (click)="openParticipantModifDialog(participant.name)">{{participant.total_spent | euro}}</td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
 
-        <ng-container matColumnDef="refunds">
-          <th mat-header-cell *matHeaderCellDef>Refunds</th>
-          <td mat-cell *matCellDef="let participant">
+      <ng-container matColumnDef="refunds">
+        <th i18n mat-header-cell *matHeaderCellDef>Refunds</th>
+        <td mat-cell *matCellDef="let participant">
 
-            <table mat-table [dataSource]="participant.refund_to" *ngIf="participant.refund_to.length > 0">
-              <ng-container matColumnDef="amount">
-                <th mat-header-cell *matHeaderCellDef>Amount</th>
-                <td mat-cell *matCellDef="let refund">{{refund.amount | euro}}</td>
-              </ng-container>
-              <ng-container matColumnDef="refunds_to">
-                <th mat-header-cell *matHeaderCellDef>To</th>
-                <td mat-cell *matCellDef="let refund">{{refund.to}}</td>
-              </ng-container>
-              <tr mat-header-row *matHeaderRowDef="participantRefundsColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: participantRefundsColumns;"  (click)="this.refundComponent.openRefundDialog(row.idx)"></tr>
-            </table>
-            <i *ngIf="participant.refund_to.length < 1" style="font-size: 8pt"> All clear, wait for refunds ... </i>
-          </td>
-          <td mat-footer-cell *matFooterCellDef></td>
-        </ng-container>
+          <table mat-table [dataSource]="participant.refund_to" *ngIf="participant.refund_to.length > 0">
+            <ng-container matColumnDef="amount">
+              <th i18n mat-header-cell *matHeaderCellDef>Amount</th>
+              <td mat-cell *matCellDef="let refund">{{refund.amount | euro}}</td>
+            </ng-container>
+            <ng-container matColumnDef="refunds_to">
+              <th i18n mat-header-cell *matHeaderCellDef>To</th>
+              <td mat-cell *matCellDef="let refund">{{refund.to}}</td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="participantRefundsColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: participantRefundsColumns;" (click)="this.refundComponent.openRefundDialog(row.idx)"></tr>
+          </table>
+          <i i18n *ngIf="participant.refund_to.length < 1" style="font-size: 8pt"> All clear, wait for refunds ... </i>
+        </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="participantsColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: participantsColumns;" ></tr>
-        <tr mat-footer-row *matFooterRowDef="participantsColumns"></tr>
-      </table>
-    </div>
+      <tr mat-header-row *matHeaderRowDef="participantsColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: participantsColumns;"></tr>
+      <tr mat-footer-row *matFooterRowDef="participantsColumns"></tr>
+    </table>
+  </div>
 
 
-    <h4  style="margin-top: 60px">Add a participant</h4>
+  <h4 i18n style="margin-top: 60px">Add a participant</h4>
 
-    <form [formGroup]="addPersonForm" (ngSubmit)="onSubmit()" >
+  <form [formGroup]="addPersonForm" (ngSubmit)="onSubmit()">
 
-      <p>
-        <mat-form-field appearance="fill">
-          <mat-label>Name</mat-label>
-          <input matInput id="name" type="text" [formControl]="nameControl" >
-          <mat-error *ngIf="nameControl.invalid">{{checkParticipantNameError()}}</mat-error>
-        </mat-form-field>
-      </p>
-      <p>
-        <mat-form-field appearance="fill">
-          <mat-label>How long was this participant present</mat-label>
-          <input matInput id="number_of_days" type="number" [formControl]="dayCountControl" >
-          <mat-error *ngIf="dayCountControl.invalid">{{checkParticipantDayCountError()}}</mat-error>
-        </mat-form-field>
-      </p>
+    <p>
+      <mat-form-field appearance="fill">
+        <mat-label i18n>Name</mat-label>
+        <input matInput id="name" type="text" [formControl]="nameControl">
+        <mat-error *ngIf="nameControl.invalid">{{checkParticipantNameError()}}</mat-error>
+      </mat-form-field>
+    </p>
+    <p>
+      <mat-form-field appearance="fill">
+        <mat-label i18n>How long was this participant present</mat-label>
+        <input matInput id="number_of_days" type="number" [formControl]="dayCountControl">
+        <mat-error *ngIf="dayCountControl.invalid">{{checkParticipantDayCountError()}}</mat-error>
+      </mat-form-field>
+    </p>
 
-      <button mat-raised-button class="mat-primary" type="submit">Add a participant !</button>
+    <button i18n mat-raised-button class="mat-primary" type="submit">Add a participant !</button>
 
-    </form>
-    </div>
+  </form>
+</div>
 
